# l10n

./: .gitignore  LICENSE  README.md  Taskfile.yml  messages.po  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: README.md  advanced.md  api.md  conf.py  index.md  intro.md  more.md  quickstart.md  removed.md  terms.md  tools.md
example-project/: .gitignore  pyproject.toml
example-project/example_project/: __main__.py  example.py
example-project/locales/: en.po  ru.po
l10n/: __init__.py  _cli.py  _extractor.py  _locale.py  _locales.py  _plurals.py  _project.py
l10n/_commands/: __init__.py  _base.py  _compile.py  _extract.py  _generate.py  _translate.py
tests/: conftest.py  test_extractor.py  test_locale.py  test_locales.py
tests/test_commands/: test_compile.py  test_extract.py  test_translate.py
